fixed timer progress stuck

--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@
 }
 
 .progress-section {
+ 
   width: 500px;
-  height: 0 20px;
+  height: 8px;
 }
 
 #progressContainer {
   width: 100%;
-  height: 8px;
-  background-color: rgba(13, 109, 253, 0.2);
+  height: 100%;
+  background-color: rgba(13, 109, 253, 0.3);
   border-radius: 4px;
   overflow: hidden;
 }
@@ -31,7 +32,7 @@
   width: 0;
   height: 100%;
   background-color: #0d6efd;
-  border-radius: 4pc;
+  border-radius: 4px;
   transition: width 0.1s linear;
 }
 
